fixed overlapping elements

--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@
 
 .top-left{
     position: absolute;
+    z-index: 2;
     top: 30px;
     left: 20px;
     display: flex;
